[package]
name = "kaiheila_overlay"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-web-actors = "4.1"
anyhow = "1.0"
awc = { version = "3.0.0", features = ["rustls"] }
bytestring = "1.0"
futures-util = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.31"
tokio = { version = "1.18", features = ["sync"] }
urlencoding = "2.1"

[dev-dependencies]
actix-rt = "2.7"
