[package]
name = "kaiheila-overlay"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-web-actors = "4.1"
anyhow = "1.0"
include_dir = "0.7"
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
actix-web-static-files = "4.0"
static-files = "0.2.1"

[build-dependencies]
static-files = "0.2.1"