[package]
name = "kaiheila"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-codec = "0.5.0"
actix-http = "3.0.4"
awc = { version = "3.0.0", features = ["rustls"] }
futures-util = "0.3.21"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
urlencoding = "2.1"
