[package]
name = "kaiheila"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.21"
log = "0.4"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.18", features = ["macros", "rt", "sync"] }
tokio-tungstenite = "0.17.1"
urlencoding = "2.1"
