[package]
name = "kaiheila"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3"
log = "0.4"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.18", features = ["macros", "rt", "sync"] }
tokio-tungstenite = "0.17"
urlencoding = "2.1"

[dev-dependencies]
pretty_env_logger = "0.4"
tokio = { version = "1.18", features = ["macros", "rt-multi-thread", "sync"] }